--- a/packages/fluent/scss/floating-label/_variables.scss
+++ b/packages/fluent/scss/floating-label/_variables.scss
@@ -1,70 +1,70 @@
 @use "../core/" as *;
 @use "../input/_variables.scss" as *;
 
-/// The resize scale of the floating label
+/// The transformation scale of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-scale: 1 !default;
 
-/// The font size of the floating label
+/// The font size of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-font-size: var( --kendo-font-size, inherit ) !default;
 
-/// The max-width of the floating label
+/// The maximum width of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-max-width: 90% !default;
 
-/// The font weight of the floating label
+/// The font weight of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-font-weight: var( --kendo-font-weight-bold, inherit ) !default;
 
-/// The line height of the floating label
+/// The line height of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-line-height: var( --kendo-line-height, normal ) !default;
 
-/// The height of the floating label
+/// The height of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-height: calc( #{$kendo-floating-label-line-height} * #{$kendo-floating-label-font-size} ) !default;
 
-/// The horizontal offset of the floating label
+/// The horizontal offset of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-offset-x: calc( #{$kendo-input-md-padding-x} + #{$kendo-input-border-width} ) !default;
 
-/// The vertical offset of the floating label
+/// The vertical offset of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-offset-y: calc( #{$kendo-floating-label-height} + #{$kendo-input-border-width} + #{$kendo-input-md-padding-y} ) !default;
 
-/// The focus resize scale of the floating label
+/// The transformation scale of the focused Floating Label.
 /// @group floating-label
 $kendo-floating-label-focus-scale: 1 !default;
 
-/// The horizontal focus offset of the floating label
+/// The horizontal offset of the focused Floating Label.
 /// @group floating-label
 $kendo-floating-label-focus-offset-x: 0 !default;
 
-/// The vertical focus offset of the floating label
+/// The vertical offset of the focused Floating Label.
 /// @group floating-label
 $kendo-floating-label-focus-offset-y: 0 !default;
 
-/// The transition of the floating label
+/// The transition of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-transition: .2s ease-out !default;
 
-/// The background color of the floating label
+/// The background color of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-bg: inherit !default;
 
-/// The text color of the floating label
+/// The text color of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-text: inherit !default;
 
-/// The focus background color of the floating label
+/// The background color of the focused Floating Label.
 /// @group floating-label
 $kendo-floating-label-focus-bg: inherit !default;
 
-/// The focus text color of the floating label
+/// The text color of the focused Floating Label.
 /// @group floating-label
 $kendo-floating-label-focus-text: inherit !default;
 
-/// The invalid text color of the floating label
+/// The invalid text color of the Floating Label.
 /// @group floating-label
 $kendo-floating-label-invalid-text: var( --kendo-invalid-text, #{$kendo-invalid-text} ) !default;
