docs(menu-button): update variables description

--- a/packages/material/scss/menu-button/_variables.scss
+++ b/packages/material/scss/menu-button/_variables.scss
@@ -1,5 +1,5 @@
 // Menu-button
 
-/// Horizontal padding of the arrow button.
+/// The horizontal padding of the button arrow in the Menu Button.
 /// @group menu-button
 $kendo-menu-button-arrow-padding-x: k-map-get( $kendo-spacing, 1 ) !default;
