--- a/packages/bootstrap/scss/menu-button/_variables.scss
+++ b/packages/bootstrap/scss/menu-button/_variables.scss
@@ -1,5 +1,5 @@
 // Menu-button
 
-/// Horizontal padding of the arrow button.
+/// The horizontal padding of the button arrow in the Menu Button.
 /// @group menu-button
 $kendo-menu-button-arrow-padding-x: $kendo-button-padding-y !default;
